fixed spacing between links

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,16 @@ p{
     text-align: center;
     
 }
-.container{
-    width: 600px;
-    margin-left: 20px;
+.image{
+    max-width: 100%;
+    border-radius: 40px;
+    display: block;
+    margin: 30px auto;
 }
-img.image{
-    max-width: 500px;
- 
+footer{
+    text-align: center;
+}
+footer a{
+    margin: 0 10px;
+    color: brown;
 }
